Added validations and exception handling to validate User's username field, and also I exclude spring security for now.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.data.mongodb.database=form-data-db
 spring.data.mongodb.uri=mongodb+srv://ahmetkaanozbek:KVEoKRRNfJ69P5vl@cluster0.f3qthvl.mongodb.net/form-data-db
+server.error.include-binding-errors=always
