--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,14 @@
-spring.data.mongodb.database=form-data-db
-spring.data.mongodb.uri=mongodb+srv://ahmetkaanozbek:KVEoKRRNfJ69P5vl@cluster0.f3qthvl.mongodb.net/form-data-db
-server.error.include-binding-errors=always
+# Application properties for development
+#spring.data.mongodb.database=form-data-db
+#spring.data.mongodb.uri=mongodb+srv://ahmetkaanozbek:KVEoKRRNfJ69P5vl@cluster0.f3qthvl.mongodb.net/form-data-db
+#server.error.include-binding-errors=always
+
+## I tried so many things to ignore properties of application.properties file for my tests.
+## However, none of these solutions worked well, so I decided to set properties as comment
+## when I run tests.
+
+# Application properties for test
+spring.data.mongodb.database=OAuth2Sample
+spring.data.mongodb.port=${mongodb.container.port}
+spring.data.mongodb.host=localhost
+spring.data.mongodb.auto-index-creation=true
